<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="@drawable/fondo03"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp"
            android:layout_marginBottom="-40dp"
            android:scaleX=".55"
            android:scaleY=".55"
            android:src="@drawable/logo"/>

        <TextView
            app:layout_constraintTop_toBottomOf="@+id/logo_login"
            android:id="@+id/Texto1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Registro Tutores"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@drawable/viewholder_background1"
            android:textColor="@color/dorado"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombreT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint03"
            android:textColorHint="@color/azul"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/azul">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apellidoPT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint04"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/azul"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/azul">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apellidoMT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint05"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/azul"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/azul">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/grupoT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint07"
            android:textColorHint="@color/azul"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/azul">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_registroT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint01"
            android:textColorHint="@color/azul"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/azul">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_registroT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint02"
            android:textColorHint="@color/azul"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/azul"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistrarme"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/azul"
            app:cornerRadius="20dp"
            android:text="@string/boton04"
            android:textAllCaps="true"
            android:textColor="@color/dorado"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnYaEstoyRegistrado"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton05"
            android:textAllCaps="false"
            android:textColor="@color/gris_5e"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_gravity="center" android:layout_marginTop="10dp" />

    </LinearLayout>

</ScrollView>