<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context=".LoginA"
    android:background="@drawable/fondo01">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
        android:id="@+id/logo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="-55dp"
        android:scaleX=".55"
        android:scaleY=".55"
        android:src="@drawable/logo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto01"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="@drawable/viewholder_background1"
            android:textColor="@color/dorado"
            android:layout_marginBottom="50dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint01"
            android:textColorHint="@color/azul"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/azul">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/btnRecuperar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint02"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/azul"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/azul"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTutores"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton02"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/gris_5e"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnIngresar"
                app:cornerRadius="20dp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/azul"
                android:text="@string/boton01"
                android:textAllCaps="true"
                android:textColor="@color/dorado"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/btnTutores"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegistrar"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton03"
                android:textAllCaps="false"
                android:textColor="@color/gris_5e"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="38dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnIngresar"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>



</ScrollView>